--- a/templates/dashboard/includes/app-header.html
+++ b/templates/dashboard/includes/app-header.html
@@ -66,10 +66,11 @@
                         <div class="widget-content-left">
                             <div class="btn-group">
                                 <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn">
-                                    <img width="42" class="rounded-circle" src="https://brandyourself.com/blog/wp-content/uploads/linkedin-profile-picture-too-close.png" alt="">
+                                    <img width="42" height="42" style="width:42;height:42" class="rounded-circle" src="/assets/images/linkedin-profile-picture-too-close.png" alt="">
                                     <i class="fa fa-angle-down ml-2 opacity-8"></i>
                                 </a>
                                 <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
+                                    <a href="{% url 'password_change' %}"><button type="button" tabindex="0" class="dropdown-item">Update password</button></a>
                                     <a href="{% url 'logout' %}"><button type="button" tabindex="0" class="dropdown-item">LogOut</button></a>
                                 </div>
                             </div>
